♻️ Refactor: Mapper, Scrapper 코드 구조 수정, 구현 기능 개선